--- a/src/app.scss
+++ b/src/app.scss
@@ -1,2 +1,4 @@
-@import "_variables.scss";
-@import "_common.scss";
+@import "Partials/_variables.scss";
+@import "Partials/_common.scss";
+@import "Partials/_mixin.scss";
+@import "Partials/_nav.scss";
